Fixed some spacing issues, and add some some details

--- a/src/style.css
+++ b/src/style.css
@@ -8,13 +8,30 @@
 }
 
 @media (max-width: 900px) {
+  h1 {
+    font-size: 42px;
+    line-height: 1.1;
+  }
+
+  h2 {
+    font-size: 44px;
+  }
+
+  h4 {
+    font-size: 26px;
+  }
+
+  .hero {
+    padding: 80px 20px;
+  }
+
   .description-box {
     padding: 0;
     text-align: center;
   }
   .content {
-    text-align: center;
     padding: 0;
+    text-align: center;
   }
 }
 
@@ -34,6 +51,10 @@ p {
   font-size: 18px;
   line-height: 30px;
 }
+nav {
+  background-color: var(--background-color);
+}
+
 nav a {
   color: var(--font-color);
   text-decoration: none;
@@ -88,7 +109,7 @@ nav ul {
 }
 
 .content-container {
-  padding: 80px 40px;
+  padding: 100px 40px !important;
 }
 
 .content {
@@ -131,6 +152,11 @@ nav ul {
   font-size: 86px;
   font-weight: bold;
   letter-spacing: 5.4px;
+}
+
+.hero h1:hover {
+  color: var(--branding-color);
+  transition: all 100ms ease-in-out;
 }
 
 .hero h2 {
